--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ## 设置全局环境变量
 ## 项目名称标题
-VITE_APP_TITLE = '电影推荐系统'
+VITE_APP_TITLE = 'app.title'
 ## 请求头token名称
 VITE_TOKEN = 'authentication'
 ## 端口
@@ -8,4 +8,4 @@ VITE_PORT = 8888
 ## 登录界面
 VITE_LOGIN = /login
 ## 首页
-VITE_INDEX = /index
+VITE_HOME = /home
