--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 ## 项目名称标题
 VITE_APP_TITLE = 'app.title'
 ## 请求头token名称
-VITE_TOKEN = 'authentication'
+VITE_TOKEN = 'token'
 ## 端口
 VITE_PORT = 8888
 ## 登录界面
