--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "screenfull": "^6.0.2",
     "vue": "^3.2.25",
     "vue-i18n": "9",
     "vue-router": "^4.0.14",
